# rodoc

./: .gitignore  Makefile  README.md  list_docs.sh  pyproject.toml  requirements.txt  rodoc.json  run.sh  run_mcp.sh  search.sh
src/: main.py
src/crawl/: content_detector.py  crawler.py  extractor.py  filters.py  manifest.py  markdown_converter.py  models.py  writer.py
src/extractor/: copier.py  filters.py  main.py  manifest.py  metadata.py  scanner.py
src/index/: chunker.py  embedding.py  faiss_store.py  loader.py  main.py  metadata.py  writer.py
src/mcp_docs_server/: __main__.py  cache.py  config.py  faiss_search.py  list_docs.py  list_docs_cli.py  model.py  resolver.py  search.py  search_docs.py  semver_resolver.py  server.py
src/normalize/: code_handler.py  html_cleaner.py  loader.py  main.py  manifest.py  markdown_processor.py  metadata.py  writer.py
